# vstreamalert-mcp-base

./: README.md  main.py  pyproject.toml
src/: athena.py  instructions.py
